--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
-{% block css %}{% endblock %}
+{% block css %}
+	<link type="text/css" rel="stylesheet" href="./static/css/index.css">
+{% endblock %}
 {% block js %}{% endblock %}
 {% block content %} 
-	<p>html.........</p>
+	<div name='index' class='index'>
+		<div name='top-nav' class='top-nav'>
+			<p>1111111111111111</p>
+		</div>
+	</div>
 {% endblock %}
